The Frontend Developer Career Path - Essential CSS Concepts - Build a Coworking Space Site - z-index challenge - fixes font family

--- a/The Frontend Developer Career Path/05. Essential CSS Concepts/03. Build a Coworking Space Site/05. z-index Challenge /index.css
+++ b/The Frontend Developer Career Path/05. Essential CSS Concepts/03. Build a Coworking Space Site/05. z-index Challenge /index.css
@@ -4,7 +4,7 @@ html, body {
 }
 
 body {
-    font-family: "Poppins"
+    font-family: "Poppins", sans-serif;
 }
 
 .container {
